--- a/Roberts.styles.css
+++ b/Roberts.styles.css
@@ -77,10 +77,14 @@ table {
 
 
 /* ----- CHECK FOR USER DARK MODE PREFERENCE ----- */
+
 /* --------------- BEGIN USER PREFERS DARK COLOR SCHEME QUERY --------------- */
-
 /* CHANGE THE BODY'S BACKGROUND COLOR TO THE DARK GRAY IF THE USER PREFERS DARK MODE */
-
+@media (prefers-color-scheme:dark){
+    body{
+        background-color: var(--dark-gray); 
+    }
+}
 /* --------------- END USER PREFERS DARK COLOR SCHEME QUERY --------------- */
 
 
@@ -138,12 +142,15 @@ footer .icon{
 
 /* ----- HANDLE PREFERS REDUCED MOTION FOR THE ICON ANIMATIONS ----- */
 /* --------------- BEGIN USER PREFERS REDUCED MOTION QUERY --------------- */
+@media (prefers-reduced-motion: reduce){
     @-webkit-keyframes icon-animation {
         0% { font-variation-settings: "TIME" 1; }
     }
     @keyframes icon-animation {
         0% { font-variation-settings: "TIME" 1; }
     }
+}
+   
 /* --------------- END USER PREFERS REDUCED MOTION QUERY --------------- */
 
 
@@ -178,26 +185,31 @@ section{
 }
 
 /* ---------- EXTRA SMALL SCREEN STYLES ---------- */
-header, footer{
-    background-color: var(--pink);
-    color: var(--white);
+@media (max-width: 480px) and (min-width: 320px){
+    header, footer{
+        background-color: var(--pink);
+        color: var(--white);
+    }
+
+    section{
+        background-color: var(--red);
+        color: var(--light-gray);
+    }
+
+    img{
+        margin: 0.75em 0.75em 0.75em 0;
+        display: inline;
+        float: left;
+    }
 }
 
-section{
-    background-color: var(--red);
-    color: var(--light-gray);
-}
 
-img{
-    margin: 0.75em 0.75em 0.75em 0;
-    display: inline;
-    float: left;
-}
+
 
 
 /* ---------- SMALL SCREEN STYLES ---------- */
 /* --------------- BEGIN SMALL SCREEN SIZES --------------- */
-    /* header, footer{
+    header, footer{
         background-color: var(--lime-green);
         color: var(--dark-gray);
     }
@@ -222,14 +234,16 @@ img{
     img{
         width: 200px;
         max-width: 200px;
-    } */
+    }
 /* --------------- END SMALL SCREEN SIZES --------------- */
 
 
 
 /* ---------- MEDIUM SCREEN STYLES ---------- */
 /* --------------- BEGIN MEDIUM SCREEN SIZES --------------- */
-    /* header, footer{
+@media only screen and (min-width:750px){
+    
+header, footer{
         background-color: var(--black);
         color: var(--white);
     }   
@@ -254,14 +268,17 @@ img{
     #seven{
         grid-column: 3/4;
         grid-row: 3/5;
-    } */
+    }
+}  
 /* --------------- END MEDIUM SCREEN SIZES --------------- */
 
 
 
 /* ---------- LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN LARGE SCREEN SIZES --------------- */
-    /* header, footer{
+@media only screen and (min-width:1080px){
+
+    header, footer{
         background-color: var(--lime-green);
         color: var(--dark-gray);
     }
@@ -292,24 +309,31 @@ img{
 
     #seven, #eight{
         grid-row: 3/4;
-    } */
+    }
+}
 /* --------------- END LARGE SCREEN SIZES --------------- */
 
 
 
 /* ---------- ADJUSTING RESPONSIVE IMAGE SIZE ---------- */
 /* --------------- BEGIN RESPONSIVE IMAGE ADJUST SIZES --------------- */
-    /* img{
+
+@media only screen and (min-width:750px){
+    img{
         width: 300px;
         max-width: 300px;
-    } */
+    }
+}
+    
 /* --------------- END RESPONSIVE IMAGE ADJUST SIZES --------------- */
 
 
 
 /* ---------- EXTRA LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN EXTRA LARGE SCREEN SIZES --------------- */
-    /* header, footer{
+@media only screen and (min-width:1373px){
+
+    header, footer{
         background-color: var(--orange);
         padding-left: 5%;
     }
@@ -374,5 +398,7 @@ img{
 
     #three p, #four p, #five p, #six p{
         padding-top: 2em;
-    } */
+    }
+
+}
 /* --------------- END EXTRA LARGE SCREEN SIZES --------------- */
